fix browser compatibility for backface-visibility option in _cards.scss

--- a/css/style.css
+++ b/css/style.css
@@ -238,8 +238,8 @@ body {
 
 .card {
   height: 52rem;
-  perspective: 150rem;
   -webkit-perspective: 150rem;
+  perspective: 150rem;
   position: relative; }
   .card__side {
     height: 52rem;
@@ -248,6 +248,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
