--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,8 +1,8 @@
 .card {
     //FUNCTIONALITY
     height: 52rem;
-    perspective: 150rem;
     -webkit-perspective: 150rem;
+    perspective: 150rem;
     position: relative;
 
     &__side {
@@ -12,6 +12,7 @@
         top:0;
         left: 0;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: 3px;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
